[package]
name = "my_git_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
libflate = "1.0.2"
sha-1 = { version = "0.9.1", default-features = true }
chrono = { version = "0.4.15", features = ["serde"] }
hex = "0.4.2"
serde = { version = "1.0.116", features = ["derive"] }
flate2 = "1.0"
serde_json = "1.0"
similar = "2.2.0"
clap = { version = "4", features = ["derive"] }
